# LiteRT-LM

./: .bazelrc  BUILD  BUILD.minizip  BUILD.minizip-ng  BUILD.sentencepiece  EXTENSIONS.bzl  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci-build-win.yml  ci-build.yml
runtime/components/: BUILD  model_resources.h  model_resources_litert_lm.cc  model_resources_litert_lm.h  model_resources_task.cc  model_resources_task.h  sampler.h  sampling_cpu_util.cc  sampling_cpu_util.h  sampling_cpu_util_test.cc  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.h  sentencepiece_tokenizer_test.cc  token_id_util.cc  token_id_util.h  token_id_util_test.cc  tokenizer.h  top_p_cpu_sampler.cc  top_p_cpu_sampler.h  top_p_cpu_sampler_test.cc
runtime/core/: BUILD  engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  session_factory.cc  session_factory.h  session_factory_test.cc
runtime/engine/: BUILD  engine.h  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  io_types_test.cc  litert_lm_main.cc  litert_lm_npu_main.cc  llm_model_settings.h  llm_model_settings_test.cc
runtime/executor/: BUILD  fake_llm_executor.cc  fake_llm_executor.h  fake_llm_executor_test.cc  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  llm_executor.cc  llm_executor.h  llm_executor_base.h  llm_executor_config.cc  llm_executor_config.h  llm_executor_config_test.cc  llm_executor_config_utils.cc  llm_executor_config_utils.h  llm_executor_config_utils_test.cc  llm_executor_google.h  llm_executor_io_types.cc  llm_executor_io_types.h  llm_executor_io_types_test.cc  llm_executor_settings.h  llm_executor_settings_test.cc  llm_executor_settings_utils.cc  llm_executor_settings_utils.h  llm_executor_settings_utils_test.cc  llm_executor_test.cc  llm_litert_compiled_model_executor.cc  llm_litert_compiled_model_executor.h  llm_litert_compiled_model_executor_test.cc  llm_litert_npu_compiled_model_executor.cc  llm_litert_npu_compiled_model_executor.h
runtime/executor/proto/: BUILD
runtime/proto/: BUILD
runtime/testdata/: BUILD
runtime/util/: BUILD  convert_tensor_buffer.h  convert_tensor_buffer_test.cc  external_file_handler.cc  external_file_handler.h  litert_lm_loader.cc  litert_lm_loader.h  litert_lm_loader_test.cc  litert_status_util.cc  litert_status_util.h  litert_status_util_test.cc  logging.h  logging_tensor_buffer.cc  logging_tensor_buffer.h  logging_test.cc  memory_mapped_file.h  memory_mapped_file_posix.cc  memory_mapped_file_test.cc  memory_mapped_file_win.cc  model_asset_bundle_resources.cc  model_asset_bundle_resources.h  scoped_file.h  scoped_file_posix.cc  status_macros.h  status_macros_test.cc  tensor_buffer_util.cc  tensor_buffer_util.h  tensor_buffer_util_test.cc  test_utils.h  zip_readonly_mem_file.cc  zip_readonly_mem_file.h  zip_utils.cc  zip_utils.h
schema/core/: litertlm_read.cc  litertlm_read.h
