module(
    name = "litert_lm",
    version = "0.1.0",
)

bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "31.0-rc1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# To get sha256, run: curl -sL <url> | sha256sum -
http_archive(
    name = "litert",
    # 2025-04-25. Tags don't include litert/.
    url = "https://github.com/google-ai-edge/LiteRT/archive/5a816dca891292a96e4562f879cd74c1e3dd851e.tar.gz",
    sha256 = "1c5745dd56c968da23e48b8194914e5154a71d40d5aef6613e2d6ac9261f852a",
    strip_prefix = "LiteRT-5a816dca891292a96e4562f879cd74c1e3dd851e",
)

http_archive(
    name = "minizip-ng",
    url = "https://github.com/zlib-ng/minizip-ng/archive/refs/tags/4.0.9.tar.gz",
    sha256 = "353a9e1c1170c069417c9633cc94ced74f826319d6d0b46d442c2cd7b00161c1",
    strip_prefix = "minizip-ng-4.0.9",
    build_file = "@//:BUILD.minizip-ng",
)

http_archive(
    name = "sentencepiece",
    url = "https://github.com/google/sentencepiece/archive/refs/tags/v0.2.0.tar.gz",
    sha256 = "9970f0a0afee1648890293321665e5b2efa04eaec9f1671fcf8048f456f5bb86",
    strip_prefix = "sentencepiece-0.2.0",
    build_file = "@//:BUILD.sentencepiece",
)

http_archive(
    name = "org_tensorflow",
    url = "https://github.com/tensorflow/tensorflow/archive/refs/tags/v2.18.1.tar.gz",
    sha256 = "467c512b631e72ad5c9d5c16b23669bcf89675de630cfbb58f9dde746d34afa8",
    strip_prefix = "tensorflow-2.18.1",
)
